--- a/css/style.css
+++ b/css/style.css
@@ -1049,22 +1049,27 @@ si-border {
 Header style
 */
 .navbar .container, .navbar .container-fluid {
-  position: relative; }
+  position: relative;
+  margin-right: 280px; 
+  margin-top: 25px;
+  margin-bottom: 25px;}
 
 .navbar .navbar-nav .nav-link {
   text-transform: uppercase;
   font-weight: 700;
-  font-size: .8rem;
-  letter-spacing: 1px;
+  font-size: 16px;
+  letter-spacing: 0.5px;
   font-family: "Lato", sans-serif;
   border-top: 2px solid transparent;
-  cursor: pointer; }
+  cursor: pointer;
+   }
+
 
 .navbar-light.navbar .navbar-nav .nav-link {
   color: rgba(34, 35, 45, 0.6); }
   .navbar-light.navbar .navbar-nav .nav-link:hover, .navbar-light.navbar .navbar-nav .nav-link:focus, .navbar-light.navbar .navbar-nav .nav-link:active, .navbar-light.navbar .navbar-nav .nav-link.active {
     color: #4a90e2;
-    border-top-color: #4a90e2; }
+  /*  border-top-color: #4a90e2;*/ }
 
 @media (min-width: 992px) {
   .navbar.navbar-sticky {
