--- a/scss/scss-minimal-flat/_navbar.scss
+++ b/scss/scss-minimal-flat/_navbar.scss
@@ -31,7 +31,7 @@ Navbar
         padding-bottom: 0px;
         position: absolute;
         left: 0;
-        top: 0;
+        top: 0px;
         z-index: 999;
         width: 100%;
         box-shadow: 0px 1px 10px rgba(#000,.05);
